--- a/cpu/CMakeLists.txt
+++ b/cpu/CMakeLists.txt
@@ -24,6 +24,14 @@ add_executable(validate_sort
 
 )
 
+add_executable(for_profiling
+        for_profiling.cpp
+        data_generator.h
+        data_generator.cpp
+        parallel_radix_sort.cpp
+        parallel_radix_sort.h)
+
 find_package(OpenMP REQUIRED)
 target_link_libraries(benchmark PRIVATE OpenMP::OpenMP_CXX)
 target_link_libraries(validate_sort PRIVATE OpenMP::OpenMP_CXX)
+target_link_libraries(for_profiling PRIVATE OpenMP::OpenMP_CXX)
